# camping_bot

./: .gitignore  package.xml  setup.cfg  setup.py
camping_bot_bridge/: esp32_odom_publisher.py  lidar_udp_bridge.py  lidar_udp_bridge_esp32s3.py
docs/: ASSISTANCE_FLOW.md  BATTERY_MONITORING.md  BUZZER_SETUP.md  CONTROL_PANEL.md  ELEVATOR_ASSIST.md  ESP32_RESET_STABILITY.md  ESP32_S3_CAMERA_SETUP.md  (+12 more)
software/ros2_ws/src/camping_robot_bringup/: package.xml  setup.cfg  setup.py
software/ros2_ws/src/camping_robot_bringup/camping_robot_bringup/: ackermann_udp_bridge.py  battery_monitor.py  cmd_vel_odom.py  drive_smoke_test.py  elevator_assist_node.py  esp32_camera_monitor.py  esp32_status_node.py  hazard_monitor.py  lds14_udp_node.py  lidar_safety_stop.py  mission_assistance_node.py  mission_command_node.py  mission_event_logger.py  mission_supervisor.py  mission_task_manager.py  robot_health_monitor.py  simple_goal_follower.py  straight_trim_test.py  udp_imu_node.py  warning_buzzer_udp_bridge.py  waypoint_patrol.py  waypoint_recorder.py
software/ros2_ws/src/camping_robot_bringup/config/: mapping.rviz  mission_locations.yaml  nav2_localization.yaml  nav2_params.yaml  patrol_waypoints.yaml  robot.yaml  slam_toolbox.yaml
software/ros2_ws/src/camping_robot_bringup/launch/: camping_robot_localization.launch.py  camping_robot_mapping.launch.py  camping_robot_mapping_cmd_odom.launch.py  camping_robot_nav2.launch.py  camping_robot_nav2_patrol.launch.py  camping_robot_patrol.launch.py  camping_robot_simple_goal.launch.py  camping_robot_udp.launch.py  rviz_mapping.launch.py
(+17 files in other folders)
